--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+  
 :root {
   --primary-color: #1a472a;
   --secondary-color: #2a623d;
@@ -5,6 +7,7 @@
   --light-gray: #aaa;
   --dark: #000;
   --light: #f4f4f4;
+  font-family: 'Lato', sans-serif;
 }
 
 * {
