--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,7 +1,16 @@
-
+.home-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 .title {
   margin-bottom: 50px;
+}
+
+.home-page h2 {
+  margin: 0 10vw
 }
 
 .start-button {
