--- a/src/pages/ListPage.module.css
+++ b/src/pages/ListPage.module.css
@@ -4,7 +4,7 @@
 
 .list-page ul {
   width: 90vw;
-  margin-top: 40px;
+  margin: 40px auto 15px;
   overflow: scroll;
 }
 
@@ -23,4 +23,21 @@
   display: flex;
   align-items: center;
   gap: 10px;
+}
+
+.navigate {
+  display: flex;
+  width: 90vw;
+  margin: auto;
+}
+
+.list-page button {
+  flex: 1;
+  background-color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 10px;
+  color: var(--light);
+  font-size: inherit;
+  padding: 10px 20px;
+  margin: 10px;
 }
