--- a/src/pages/ListPage.module.css
+++ b/src/pages/ListPage.module.css
@@ -44,3 +44,14 @@
   padding: 10px 20px;
   margin: 10px;
 }
+
+.empty {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.list-page .empty > * {
+  flex: 0
+}
