--- a/src/pages/RefinePage.module.css
+++ b/src/pages/RefinePage.module.css
@@ -22,3 +22,24 @@
   box-shadow: 0 5px 10px 5px var(--light-gray);
   overflow: hidden;
 }
+
+.empty {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.refine-page .empty > * {
+  flex: 0
+}
+
+.refine-page button {
+  background-color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 10px;
+  color: var(--light);
+  font-size: inherit;
+  padding: 8px 40px;
+  margin: 15px;
+}
