--- a/src/pages/SelectPage.module.css
+++ b/src/pages/SelectPage.module.css
@@ -2,6 +2,7 @@
   height: 100dvh;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .select-page h1 {
@@ -20,9 +21,7 @@
 
 .select-page h3 {
   flex-grow: 1;
-  margin: 5px auto;
-  display: flex;
-  align-items: center;
+  margin: 5px 15px;
 }
 
 .action {
@@ -40,5 +39,5 @@
   color: var(--light);
   font-size: inherit;
   padding: 8px 40px;
-  margin-bottom: 15px;
+  margin: 0 15px 15px;
 }
