--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -22,3 +22,12 @@
   border: 1px solid var(--secondary-color);
   border-radius: 10px;
 }
+
+.home-page p {
+  position: absolute;
+  bottom: 20px;
+}
+
+.home-page a.link {
+  color: var(--light-gray);
+}
