--- a/src/pages/SelectPage.module.css
+++ b/src/pages/SelectPage.module.css
@@ -10,6 +10,18 @@
   flex-grow: 0;
 }
 
+.select-page .no-categories {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+}
+
+.select-page .no-categories h3 {
+  flex-grow: 0;
+}
+
 .img-container {
   height: 350px;
   margin: 5px auto 20px;
